changes with Apoyanos ctas fonts fixed

--- a/styles.css
+++ b/styles.css
@@ -2004,7 +2004,9 @@ a {
         padding: 0 0 1rem 0;
         margin:0;
     }
-
+    .donations-text a{
+        font-size: 1.5rem;
+    }
     .donations-text li{
         font-size: 1.5rem;
     }
