--- a/styles.css
+++ b/styles.css
@@ -3490,7 +3490,7 @@ a {
     margin: 0 0 0 4rem;
 }
 .about-section .about-us-image img{
-    border-radius: 5%;
+    border-radius: 10px;
 }
 
 .about-section h1 {
@@ -3654,7 +3654,7 @@ a {
     .about-section .about-us-image{
         display: flex;
         flex-direction: column;
-        min-width: 80vw;
+        min-width: 85vw;
         max-width: 100vw;   
         margin: 0 6rem 0 0;
     }
@@ -3970,8 +3970,70 @@ a {
 
 .calendar-event:nth-child(even) {
     background-color: #f1f5ff;
-} */
+}
 
+@media (max-width: 480px) {
+
+    #calendar-container {
+    margin: 2rem 0;
+    text-align: center;
+    padding: 2rem 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: scroll;
+    }
+    #calendar-container h1{
+        margin: 2rem 0;
+        font-size: 1.5rem;
+    }
+
+     #calendar-container button{
+        font-size: 1.5rem;
+    }
+     .calendar-event {
+       padding: 1rem;
+       margin: 0.5rem 0;
+    }
+     .calendar-event h3{
+        font-size: 1rem;
+    }
+     .calendar-event p{
+        font-size: 1.2rem;
+    }
+
+    #calendar-grid {
+        display: flex;
+        padding: 0rem 0rem 2rem 3rem;
+    }
+    .year-column,
+    .month-column,
+    .event-column {
+        flex: 1;
+        margin: 0 10px;
+    }
+
+    /* Start with the month and event columns hidden */
+    .month-column ,
+    .event-column {
+        opacity: 0;
+        transition: opacity 1.5s ease;
+    }
+    .year-button, .month-button {
+    display: block;
+    min-width: 10vw;
+    margin: 1rem 0;
+    padding: 0.3rem 0.6rem;
+    font-size: 1.5rem;
+    font-family: 'Gill Sans Nova', sans-serif;
+    cursor: pointer;
+    background-color: #FF8080;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: 2s;
+}
+}
 /* Full Section Components */
 .hero-full,
 .cards-full,
@@ -4082,20 +4144,6 @@ a {
     }
     .cards-full {
         padding: 0 0 2rem 0;
-    }
-    .calendar-section {
-        padding: 4rem 2rem
-    }
-    
-    .calendar-section h1{
-        font-size: 3rem;
-    }
-
-    .calendar-event h3{
-        font-size: 2rem;
-    }
-    .calendar-event p{
-        font-size: 1.5rem;
     }
     /* Banner spacing */
     .moving-banner {
