cambios agregados hasta Mayo 17

--- a/styles.css
+++ b/styles.css
@@ -1835,6 +1835,17 @@ a {
     margin-bottom: 1rem;
 }
 
+.donations-text .donations-image {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;  
+    margin: 1rem 0;
+    border-radius: 10px;
+}
+
+.donations-text img {
+    border-radius: 10px;
+}
 .donations-text p {
     font-size: 2rem;
     color: black;
@@ -1871,18 +1882,6 @@ a {
 
 .cta-button:hover {
     background-color: #D19FE8;
-}
-
-/* Donations Image Styling */
-.donations-image {
-    flex: 1;
-    text-align: left;
-}
-
-.donations-image img {
-    max-width: 100%;
-    border-radius: 10px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 /* Responsive Design */
@@ -1929,13 +1928,6 @@ a {
         margin: 0 0 1rem 0;
         max-width: 100vw;
     }
-    .donations-text, .donations-image {
-        text-align: left;
-    }
-
-    .donations-image img {
-        max-width: 300px; /* Ajuste para pantallas pequeñas */
-    }
 }
 /* Responsive Design */
 @media (max-width: 767px) {
@@ -1949,14 +1941,6 @@ a {
 
     .donations-content {
         flex-direction: column;
-    }
-
-    .donations-text, .donations-image {
-        text-align: left;
-    }
-
-    .donations-image img {
-        max-width: 300px; /* Ajuste para pantallas pequeñas */
     }
 }
 
@@ -1991,6 +1975,14 @@ a {
         padding:0;
         margin:0;
         text-align: left;
+    }
+
+    .donations-text .donations-image{
+    display: flex;
+    flex-direction: column;
+    min-width: auto;
+    max-width: 60rem;  
+    margin: 1rem 0;
     }
 
     .donations-text h2{
@@ -2707,11 +2699,12 @@ a {
     height: 100%;
     background-color: rgba(0,0,0,0.8);
     text-align: center;
+    padding: 5rem 2rem;
 }
 
 .modal-content {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 90%;
+    max-height: auto;
     margin: auto;
     display: block;
     margin-top: 10rem;
@@ -2720,11 +2713,30 @@ a {
 
 .close {
     position: absolute;
-    top: 15px;
+    top: 10rem;
     right: 30px;
     font-size: 40px;
     color: white;
     cursor: pointer;
+}
+.nav-arrow {
+    position: absolute;
+    top: 50%;
+    font-size: 60px;
+    color: white;
+    cursor: pointer;
+    user-select: none;
+    padding: 1rem;
+    transform: translateY(-50%);
+    z-index: 1001;
+}
+
+.left-arrow {
+    left: 30px;
+}
+
+.right-arrow {
+    right: 30px;
 }
 .cta-button-activismo {
     margin: 1rem 0rem;
@@ -2785,12 +2797,22 @@ a {
         max-width: 100vw;
         overflow-x: hidden;
     }
+    .hero-activismo .hero-text a{
+        min-width:auto;
+        padding: 1rem 0.5rem;
+        margin: 1rem 0 2rem 0;
+    }
     .cta-button-activismo {
         padding: 1rem 2rem;
         border-radius: 10px;
         text-decoration: none;
         min-width: 20vw;
     }
+    .topic-section {
+    margin: 2rem 4rem;
+    padding: 2rem 0;
+    border-bottom: 4px solid rgb(98, 45, 134);
+}
 }
 
 @media (max-width: 480px) {
@@ -2867,14 +2889,19 @@ a {
 /* Hero Section for Formacion */
 .hero-formacion {
     min-height: 40vh;
-    background-color: rgba(255, 128, 128, 0.6); /* Color de fondo similar a la imagen */
-    padding: 3rem 1rem;
+    background-color: rgba(251, 110, 110, 0.6); /* Color de fondo similar a la imagen */
+    padding: 5rem 1rem 0 4rem;
     display: flex;
     align-items: left;
     justify-content: left;
     margin: 4rem 0;
 }
-
+.hero-formacion .hero-text {
+        min-width: 100vw;
+        background-color: transparent; /* Color de fondo similar a la imagen */
+        margin: 0;
+        padding:0;
+    }
 .hero-formacion h1{
     font-size: 3rem;
     color: rgb(255, 98, 98);
@@ -2950,7 +2977,6 @@ a {
     display: flex;
     flex-direction: column;
 }
-
 /* Back Side */
 .flip-card-back {
     transform: rotateY(180deg);
@@ -2959,7 +2985,7 @@ a {
 }
 /* Back Side */
 .flip-card p{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     color: white;
 }
 /* Text Styles */
@@ -2999,6 +3025,7 @@ a {
     .hero-formacion .hero-text {
         padding: 5rem 2rem 1rem 4rem;
         margin: 0;
+        min-width:100vw;
     }
 
     .hero-formacion .hero-text h1{
@@ -3091,12 +3118,15 @@ a {
     }
     .flip-card {
         width: 85vw;
-        min-height: auto;
+        max-height: 40vh;
         margin: 1.5rem 0; 
     }
     .flip-card-inner {
         width: 85vw;
-        min-height: 60vh; 
+        max-height: 40vh;
+    }
+    .flip-card {
+        font-size: 1.5rem;
     }
 }
 
@@ -3107,7 +3137,7 @@ a {
 .hero-consumo {
     min-height: 40vh;
     background-color: rgba(167, 187, 64, 0.6); /* Color de fondo similar a la imagen */
-    padding: 3rem 1rem;
+    padding: 4rem 1rem 1rem 1rem;
     display: flex;
     align-items: left;
     justify-content: left;
@@ -3135,6 +3165,13 @@ a {
     justify-content: center;
 }
 .colaboracion-section h1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    margin: 2rem;
+}
+.colaboracion-section p{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -3188,10 +3225,12 @@ a {
         .hero-consumo .hero-content {
             padding: 0 0 2rem 0;
             margin: 0;
+            min-width: 70vw;
         }
         .hero-consumo .hero-content .hero-text {
             padding: 5rem 0 0 4rem;
-            margin: 0;
+            margin: 0;            
+            min-width: 70vw;
         }
         .hero-consumo .hero-content .hero-text h1{
             font-size: 3rem;
@@ -3201,7 +3240,7 @@ a {
         .hero-consumo .hero-content .hero-text p{
             font-size: 2rem;
             line-height: 1.2;
-            padding: 1rem 3rem 2rem 0;
+            padding: 1rem 1rem 2rem 0;
             margin: 0;
         }
         .hero-consumo .hero-content .hero-text a{
@@ -3215,6 +3254,17 @@ a {
             border-radius: 5px;
             text-decoration: none;
             min-width: 20vw;
+        }
+        
+        .colaboracion-section h1{
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        .colaboracion-section p{
+            font-size: 1.5rem;
+            text-align: center;
+            margin: 0.5rem 0;
+            padding: 0;
         }
     }
 @media (max-width: 767px) {
@@ -3278,12 +3328,24 @@ a {
         min-width: 20vw;
     }
     .colaboracion-section h1{
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: center;
+    }
+    .colaboracion-section p{
+        font-size: 1.5rem;
+        text-align: center;
+        margin: 0.5rem 0;
+        padding: 0;
     }
     .colaboracion-section .logo{
         min-width: 8rem;
         height: 8rem;
+    }
+    .blog-cta h2{
+        text-align: center;
+    }
+    .blog-cta p{
+        text-align: center;
     }
 }
 
@@ -3481,6 +3543,12 @@ a {
     margin: 6rem 2rem 0 2rem;
 }
 
+.about-us .role-title{
+    color:#622d86;
+    font-family: 'Hewitt-Cooper', sans-serif !important;
+    font-size: 1.2rem;
+}
+
 .about-section {
     margin: 2rem;
     display: flex;
@@ -3553,8 +3621,14 @@ a {
 }
 
 .about-text .card-container {
-    margin: 2rem 4rem 6rem 0;
-    padding: 0 2rem 0 37rem;
+    margin: 2rem 4rem 5rem 0;
+    padding: 0 2rem 1rem 37rem;
+}
+
+.about-text .card img {
+    border-radius: 10px;
+    min-width: 30vw;
+    margin: 2rem 0;
 }
 .about-text .card h3{
     font-size: 2rem;
@@ -3566,6 +3640,10 @@ a {
 }
 /* Responsive Design */
 @media (max-width: 1028px){
+    .about-us .about-us-image {
+        margin: 1rem 0;
+        width: 90vw;
+    }
     .about-section {
         flex-direction: column;
         text-align: left;
@@ -3581,14 +3659,6 @@ a {
         font-size: 1.7rem;
         padding: 0 8rem 0 0;
         margin:0;
-    }
-    
-    .about-section .about-us-image{
-        display: flex;
-        flex-direction: column;
-        min-width: auto;
-        max-width: 40rem;    
-        margin: 0 6rem 0 0;
     }
     .about-text {
         margin: 1rem 1rem;
@@ -3616,8 +3686,12 @@ a {
     }
     .about-text .card-container .card{
         min-width: 60vw;
-        padding: 2rem 6rem 2rem 0;
+        padding: 2rem 4rem 2rem 0;
         margin: 0;
+    }
+    .about-text .card-container .card img {
+        min-width: 50vw;
+        margin: 1rem 0;
     }
     .about-text .card-container .card h3 {
         font-size: 1.5rem;
@@ -3633,6 +3707,10 @@ a {
 
 /* Responsive Design */
 @media (max-width: 767px) {
+    .about-us .about-us-image {
+        margin: 1rem 0;
+        width: 80vw;
+    }
     .about-section {
         flex-direction: column;
         text-align: left;
@@ -3661,9 +3739,8 @@ a {
     .about-section .about-us-image{
         display: flex;
         flex-direction: column;
-        min-width: 85vw;
-        max-width: 100vw;   
-        margin: 0 6rem 0 0;
+        width: 80vw;
+        margin: 0 1rem;
     }
     .about-section {
         flex-direction: column;
@@ -3672,28 +3749,28 @@ a {
     }
 
     .about-section h1{
-        font-size: 2rem;
-        padding: 0 4rem 0 0;
+        font-size: 1.5rem;
+        padding: 0 2rem 0 1rem;
         margin:0;
     }
     .about-section p{
-        font-size: 1.7rem;
-        padding: 0 4rem 0 0;
+        font-size: 1.5rem;
+        padding: 0 2rem 0 1rem;
         margin:0;
     }
 
     .about-text {
         margin: 2rem 1rem;
-        padding: 0 0;
+        padding: 0;
     }
     .about-text h2{
-        font-size: 2rem;
-        padding: 0 4rem 0 0;
+        font-size: 1.5rem;
+        padding: 2rem 3rem 0 1rem;
         margin:0;
     }
     .about-text p{
-        font-size: 1.7rem;
-        padding: 2rem 4rem 2rem 0;
+        font-size: 1.5rem;
+        padding: 1rem 3rem 2rem 1rem;
         margin:0;
     }
     .about-text .cta-button {
@@ -3706,10 +3783,20 @@ a {
     }
     .about-text .card-container {
         padding: 0;
-        margin: 0 4rem 0 0;
+        margin: 0;
+    }
+    .about-text .card-container .card{
+        min-width: 50vw;
+        padding: 2rem 1rem;
+        margin: 1rem 0;
+    }
+    
+    .about-text .card-container .card img {
+        min-width: 70vw;
+        margin: 1rem 0;
     }
     .about-text .card-container .card h3 {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         padding: 0;
         margin:0;
     }.about-text .card-container .card p{
@@ -3815,8 +3902,9 @@ a {
     .blog-cta a{
         font-size: 2rem;
     }
-    .allies {
-        margin: 1rem 0 0 4rem;
+    .allies p {
+        margin: 1rem 6rem;
+        padding: 0;
     }
     .allies h2{
         margin: 1rem 0;
@@ -3931,11 +4019,14 @@ a {
     font-size: 2rem;
     font-family: 'Gill Sans Nova', sans-serif;
     cursor: pointer;
-    background-color: #FF8080;
+    background-color: #ff9b9b;
     color: white;
     border: none;
     border-radius: 5px;
     transition: 2s;
+}
+.month-button {
+    background-color: #FF8080;
 }
 
 .year-button:hover, .month-button:hover {
@@ -4034,11 +4125,13 @@ a {
     font-size: 1.5rem;
     font-family: 'Gill Sans Nova', sans-serif;
     cursor: pointer;
-    background-color: #FF8080;
     color: white;
     border: none;
     border-radius: 5px;
     transition: 2s;
+}
+.month-button {
+    min-width: 30vw;
 }
 }
 /* Full Section Components */
@@ -4059,7 +4152,6 @@ a {
 .hero-full {
     background-color: #D9A9FB;
 }
-
 .cards-full {
     background-color: white;
     min-height: 50vh;
